Fixed overflow issues with lists.

--- a/client/src/components/content/data/lists/navs/ListButtons.scss
+++ b/client/src/components/content/data/lists/navs/ListButtons.scss
@@ -15,10 +15,12 @@
 
     .SvgPanelElement {
       &.StepperSvg {
-        transition: background-size $transition-speed $transition-timing;
+        * {
+          transition: transform $transition-speed $transition-timing;
+        }
 
-        &.ListButtonOverflow {
-          opacity: 0;
+        &.ListButtonOverflow * {
+          transform: scale(0);
         }
       }
 
