--- a/client/src/components/content/data/lists/navs/ListNav.scss
+++ b/client/src/components/content/data/lists/navs/ListNav.scss
@@ -1,15 +1,33 @@
 @import 'src/assets/styles/config.scss';
 
 .ListNav {
+  $header-min-width: 6em;
+
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(var(--auto-column-count), auto) 1fr;
+
+  grid-template-columns:
+    fit-content(100vw) repeat(var(--auto-column-count), auto)
+    1fr;
+
   overflow: hidden;
   align-items: center;
   column-gap: 1em;
   width: 100%;
   height: 3em;
   padding: 1em 1em 0;
+
+  &.OverflowMaxed {
+    grid-template-columns: 1fr repeat(var(--auto-column-count), auto) auto;
+
+    .ListButtons {
+      width: 0;
+    }
+
+    .ListHeader {
+      width: unset;
+    }
+  }
 
   &:not(.Overflowing) {
     .ListOverflow {
@@ -28,7 +46,7 @@
     overflow-x: hidden;
     margin: 0;
     height: 2em;
-    min-width: 2em;
+    width: fit-content;
     border-radius: 1em;
     padding: 0;
     background-color: transparent;
